# AutoTrader

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CNAME  DEVELOP.md  Gemfile  LICENSE  MANIFEST.in  README.md  TODO.md  _config.yml  about.md  archive.html  blog.md  candlestick.html  ema_cross_chart.html  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
_data/: navigation.yml
_docs/: 0.0-docs_index.md  1.1-autotrader.md  1.2-strategies.md  2.0-brokers-index.md  2.1-virtual-broker.md  2.2-oanda.md  2.3-coming-soon.md  2.4-virtual-broker-utils.md  2.5-oanda-utils.md  3.0-configuration.md  3.1-global-config.md  3.2-strategy-config.md  4.1-emailing copy.md  4.1-emailing.md  4.2-autoplot.md  4.3-autostream.md  4.4-logging.md  4.5-autodata.md  4.6-indicators.md  4.x-auto-optimise.md  interactive-chart.md  interactive-plot.md  validation.md
_includes/: candlestick.html  test.html
_layouts/: base.html  home_landing_copy.html  home_page.html
_posts/: 2018-07-01-welcome.md
_site/: 404.html  about.html  archive.html  blog.html  docs.html  feed.xml  index.html  sitemap.xml  tutorials.html
_tutorials/: 0.0-tutorials.md  1.0-getting-started.md  1.1-getting-autotrader.md  1.2-getting-data.md  1.3-building-strategy.md  1.4-backtesting.md  1.5-optimisation.md  1.6-going-live.md  3.2-creating-oanda-account.md  3.3-creating-a-grid-strategy.md  automation.md
assets/: site.webmanifest
autotrader/: __init__.py  apcleanup.py  auto_optimise.py  autobot.py  autodata.py  autoplot.py  autostream.py  autotrader.py  indicators.py  strategy.py  utilities.py
config/: simple_macd.yaml  template.yaml
content/: autotrader-users.md  supported-APIs.md
docs/: .gitignore  CHANGELOG.md  CNAME  COPYRIGHT  Gemfile  README.md  _config.yml  about.md  auto-optimise.md  autotrader.brokers.rst  autotrader.comms.rst  backtesting-with-autotrader.md  index.html  (+3 more)
(+400 files in other folders)
