[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "v$version"
version_files = [
    "autotrader/__init__.py:__version__",
]
update_changelog_on_bump = true
