[metadata]
name = autotrader
version = 0.0.2
author = Kieran Mackle
author_email = kemackle98@gmail.com
description = A platform for developing, optimising and deploying automated trading systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kieran-mackle/AutoTrader
project_urls =
    Bug Tracker = https://github.com/kieran-mackle/AutoTrader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
