[metadata]
name = autotrader
version = 0.1.5
author = Kieran Mackle
author_email = kemackle98@gmail.com
description = A Python-based platform for developing, optimising and deploying automated trading systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://kieran-mackle.github.io/AutoTrader/
project_urls =
    Bug Tracker = https://github.com/kieran-mackle/AutoTrader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    yfinance
    pyfiglet
    PyYAML
    v20
    bokeh
    plotly
    scipy

[options.packages.find]
where = .
